CUDA error: ILLEGAL_ADDRESS in cuCtxSynchronize() #42160

Closed
opened 2014-10-09 16:44:54 +02:00 by Danny McGrath · 20 comments
Member

System Information
Ubuntu 14.04 64bit; Nvidia GTX 550 Ti (sm21)

Blender Version
Broken: 2.72 47b8bf5

Short description of error
Cuda crashes/stops working (but can be toggled off/on again) if multiple importance is disabled after being set to 512.

Exact steps for others to reproduce the error

  • Enable cycles in viewport
  • Switch to world settings and enable Multiple Importance
  • Change 256 to 512
  • Disable Multiple Importance

Output of the console:
cuda_crash.png

**System Information** Ubuntu 14.04 64bit; Nvidia GTX 550 Ti (sm21) **Blender Version** Broken: 2.72 47b8bf5 **Short description of error** Cuda crashes/stops working (but can be toggled off/on again) if multiple importance is disabled after being set to 512. **Exact steps for others to reproduce the error** - Enable cycles in viewport - Switch to world settings and enable Multiple Importance - Change 256 to 512 - Disable Multiple Importance Output of the console: ![cuda_crash.png](https://archive.blender.org/developer/F115608/cuda_crash.png)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @dmcgrath

Added subscriber: @dmcgrath
Sergey Sharybin was assigned by Bastien Montagne 2014-10-10 09:35:27 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

That one would be for you, Sergey. :)

That one would be for you, Sergey. :)

Added subscriber: @mib2berlin

Added subscriber: @mib2berlin

Hi, I cant verify this error on my system.
Blender 45ce901

Opensuse 13.1/64
Intel i5 3770K
GTX 760 4 GB (Display)
GTX 560Ti 1.28 GB 448 Cores
Driver 343.19

Tested on both cards and with GTX 760 also with experimental kernel.

Cheers, mib

Hi, I cant verify this error on my system. Blender 45ce901 Opensuse 13.1/64 Intel i5 3770K GTX 760 4 GB (Display) GTX 560Ti 1.28 GB 448 Cores Driver 343.19 Tested on both cards and with GTX 760 also with experimental kernel. Cheers, mib
Author
Member

Ok, I just upgraded Blender to c2d6de8e20 and it still happens.

Ok, I just upgraded Blender to c2d6de8e20 and it still happens.

Added subscriber: @david_black

Added subscriber: @david_black

Can confirm the error on my system with Blender 2.72

Windows 7 x64
Twin GTX 580 3GB

Tested Supported and Experimental cubin
Blender 2.72 hash 95182d1 (official release)
Blender 2.72 hash ee5936c

2014-10-12_20_38_06.jpg

Blender 2.70a and 2.71 does not cause a CUDA error while performing the steps outlined in first post.

After further tests, Multiple Importance Map Resolution of 511 and below does not cause a CUDA error with 2.72, just settings of 512 and above.

David

Can confirm the error on my system with Blender 2.72 Windows 7 x64 Twin GTX 580 3GB Tested Supported and Experimental cubin Blender 2.72 hash 95182d1 (official release) Blender 2.72 hash ee5936c ![2014-10-12_20_38_06.jpg](https://archive.blender.org/developer/F116187/2014-10-12_20_38_06.jpg) Blender 2.70a and 2.71 does not cause a CUDA error while performing the steps outlined in first post. After further tests, Multiple Importance Map Resolution of 511 and below does not cause a CUDA error with 2.72, just settings of 512 and above. David

This issue was referenced by acd7f50308

This issue was referenced by acd7f503086147670b6a3e15e251696efcbce7f3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit acd7f50308.

Closed by commit acd7f50308.

This issue was referenced by fd2de82207

This issue was referenced by fd2de82207e9519f1d1a5d470b45ae573a7bd6bd

Added subscriber: @KarimHosein

Added subscriber: @KarimHosein

I have had this problem in 2.69, 2.71, 2.72a and now 2.73a.

Everytime I come to this sight, it is listed as fixed. This is not fixed.

OUTPUT START
CUDA error: ILLEGAL_ADDRESS in cuCtxSynchronize()

Refer to the Cycles GPU rendering documentation for possible solutions:
http://www.blender.org/manual/render/cycles/gpu_rendering.html

CUDA error: ILLEGAL_ADDRESS in cuCtxSynchronize()
CUDA error: ILLEGAL_ADDRESS in cuMemcpyDtoH((uchar*)mem.data_pointer + offset, (CUdeviceptr)(mem.device_pointer + offset), size)
CUDA error: ILLEGAL_ADDRESS in cuCtxSynchronize()
CUDA error: ILLEGAL_ADDRESS in cuMemcpyDtoH((uchar*)mem.data_pointer + offset, (CUdeviceptr)(mem.device_pointer + offset), size)
CUDA error: ILLEGAL_ADDRESS in cuCtxSynchronize()
CUDA error: ILLEGAL_ADDRESS in cuMemcpyDtoH((uchar*)mem.data_pointer + offset, (CUdeviceptr)(mem.device_pointer + offset), size)
CUDA error: ILLEGAL_ADDRESS in cuCtxSynchronize()
CUDA error: ILLEGAL_ADDRESS in cuMemcpyDtoH((uchar*)mem.data_pointer + offset, (CUdeviceptr)(mem.device_pointer + offset), size)
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: ILLEGAL_ADDRESS in cuMemAlloc(&device_pointer, size)
CUDA error: ILLEGAL_ADDRESS in cuModuleGetGlobal(&cumem, &cubytes, cuModule, name)
CUDA error: ILLEGAL_ADDRESS in cuMemcpyHtoD(cumem, (void*)&ptr, cubytes)
CUDA error: ILLEGAL_ADDRESS in cuMemAlloc(&device_pointer, size)
CUDA error: ILLEGAL_ADDRESS in cuModuleGetGlobal(&cumem, &cubytes, cuModule, name)
CUDA error: ILLEGAL_ADDRESS in cuMemcpyHtoD(cumem, (void*)&ptr, cubytes)
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
Error: CUDA error: ILLEGAL_ADDRESS in cuCtxSynchronize()
OUTPUT END

DIAGNOSIS BEGIN
karim@Phenuntu:~$ cat /proc/driver/nvidia/version
NVRM version: NVIDIA UNIX x86_64 Kernel Module 340.29 Thu Jul 31 20:23:19 PDT 2014
GCC version: gcc version 4.8.2 (Ubuntu 4.8.2-19ubuntu1)
karim@Phenuntu:~$
karim@Phenuntu:~$
karim@Phenuntu:~$ gcc --version
gcc (Ubuntu 4.8.2-19ubuntu1) 4.8.2
Copyright (C) 2013 Free Software Foundation, Inc.
This is free software; see the source for copying conditions. There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

karim@Phenuntu:~$
karim@Phenuntu:~$
karim@Phenuntu:~$
karim@Phenuntu:~$ lsmod | grep nv
nvidia_uvm 35066 2
nvidia 10540162 68 nvidia_uvm
drm 303102 2 nvidia
karim@Phenuntu:~$
karim@Phenuntu:~$
karim@Phenuntu:~$
karim@Phenuntu:~$
karim@Phenuntu:~$ cd /usr/local/cuda/samples/1_Utilities/deviceQuery
karim@Phenuntu:/usr/local/cuda/samples/1_Utilities/deviceQuery$ ./deviceQuery
./deviceQuery Starting...

CUDA Device Query (Runtime API) version (CUDART static linking)

Detected 1 CUDA Capable device(s)

Device 0: "GeForce GTX 760"

CUDA Driver Version / Runtime Version          6.5 / 6.5
CUDA Capability Major/Minor version number:    3.0
Total amount of global memory:                 4096 MBytes (4294639616 bytes)
( 6) Multiprocessors, (192) CUDA Cores/MP:     1152 CUDA Cores
GPU Clock rate:                                1150 MHz (1.15 GHz)
Memory Clock rate:                             3004 Mhz
Memory Bus Width:                              256-bit
L2 Cache Size:                                 524288 bytes
Maximum Texture Dimension Size (x,y,z)         1D=(65536), 2D=(65536, 65536), 3D=(4096, 4096, 4096)
Maximum Layered 1D Texture Size, (num) layers  1D=(16384), 2048 layers
Maximum Layered 2D Texture Size, (num) layers  2D=(16384, 16384), 2048 layers
Total amount of constant memory:               65536 bytes
Total amount of shared memory per block:       49152 bytes
Total number of registers available per block: 65536
Warp size:                                     32
Maximum number of threads per multiprocessor:  2048
Maximum number of threads per block:           1024
Max dimension size of a thread block (x,y,z): (1024, 1024, 64)
Max dimension size of a grid size    (x,y,z): (2147483647, 65535, 65535)
Maximum memory pitch:                          2147483647 bytes
Texture alignment:                             512 bytes
Concurrent copy and kernel execution:          Yes with 1 copy engine(s)
Run time limit on kernels:                     Yes
Integrated GPU sharing Host Memory:            No
Support host page-locked memory mapping:       Yes
Alignment requirement for Surfaces:            Yes
Device has ECC support:                        Disabled
Device supports Unified Addressing (UVA):      Yes
Device PCI Bus ID / PCI location ID:           1 / 0
Compute Mode:
   < Default (multiple host threads can use ::cudaSetDevice() with device simultaneously) >

deviceQuery, CUDA Driver = CUDART, CUDA Driver Version = 6.5, CUDA Runtime Version = 6.5, NumDevs = 1, Device0 = GeForce GTX 760
Result = PASS
karim@Phenuntu:/usr/local/cuda/samples/1_Utilities/deviceQuery$
DIAGNOSIS ENDS

Ubuntu 14.04

I have had this problem in 2.69, 2.71, 2.72a and now 2.73a. Everytime I come to this sight, it is listed as fixed. This is not fixed. **OUTPUT START** CUDA error: ILLEGAL_ADDRESS in cuCtxSynchronize() Refer to the Cycles GPU rendering documentation for possible solutions: http://www.blender.org/manual/render/cycles/gpu_rendering.html CUDA error: ILLEGAL_ADDRESS in cuCtxSynchronize() CUDA error: ILLEGAL_ADDRESS in cuMemcpyDtoH((uchar*)mem.data_pointer + offset, (CUdeviceptr)(mem.device_pointer + offset), size) CUDA error: ILLEGAL_ADDRESS in cuCtxSynchronize() CUDA error: ILLEGAL_ADDRESS in cuMemcpyDtoH((uchar*)mem.data_pointer + offset, (CUdeviceptr)(mem.device_pointer + offset), size) CUDA error: ILLEGAL_ADDRESS in cuCtxSynchronize() CUDA error: ILLEGAL_ADDRESS in cuMemcpyDtoH((uchar*)mem.data_pointer + offset, (CUdeviceptr)(mem.device_pointer + offset), size) CUDA error: ILLEGAL_ADDRESS in cuCtxSynchronize() CUDA error: ILLEGAL_ADDRESS in cuMemcpyDtoH((uchar*)mem.data_pointer + offset, (CUdeviceptr)(mem.device_pointer + offset), size) CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: ILLEGAL_ADDRESS in cuMemAlloc(&device_pointer, size) CUDA error: ILLEGAL_ADDRESS in cuModuleGetGlobal(&cumem, &cubytes, cuModule, name) CUDA error: ILLEGAL_ADDRESS in cuMemcpyHtoD(cumem, (void*)&ptr, cubytes) CUDA error: ILLEGAL_ADDRESS in cuMemAlloc(&device_pointer, size) CUDA error: ILLEGAL_ADDRESS in cuModuleGetGlobal(&cumem, &cubytes, cuModule, name) CUDA error: ILLEGAL_ADDRESS in cuMemcpyHtoD(cumem, (void*)&ptr, cubytes) CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) Error: CUDA error: ILLEGAL_ADDRESS in cuCtxSynchronize() **OUTPUT END** **DIAGNOSIS BEGIN** karim@Phenuntu:~$ cat /proc/driver/nvidia/version NVRM version: NVIDIA UNIX x86_64 Kernel Module 340.29 Thu Jul 31 20:23:19 PDT 2014 GCC version: gcc version 4.8.2 (Ubuntu 4.8.2-19ubuntu1) karim@Phenuntu:~$ karim@Phenuntu:~$ karim@Phenuntu:~$ gcc --version gcc (Ubuntu 4.8.2-19ubuntu1) 4.8.2 Copyright (C) 2013 Free Software Foundation, Inc. This is free software; see the source for copying conditions. There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. karim@Phenuntu:~$ karim@Phenuntu:~$ karim@Phenuntu:~$ karim@Phenuntu:~$ lsmod | grep nv nvidia_uvm 35066 2 nvidia 10540162 68 nvidia_uvm drm 303102 2 nvidia karim@Phenuntu:~$ karim@Phenuntu:~$ karim@Phenuntu:~$ karim@Phenuntu:~$ karim@Phenuntu:~$ cd /usr/local/cuda/samples/1_Utilities/deviceQuery karim@Phenuntu:/usr/local/cuda/samples/1_Utilities/deviceQuery$ ./deviceQuery ./deviceQuery Starting... CUDA Device Query (Runtime API) version (CUDART static linking) Detected 1 CUDA Capable device(s) Device 0: "GeForce GTX 760" ``` CUDA Driver Version / Runtime Version 6.5 / 6.5 CUDA Capability Major/Minor version number: 3.0 Total amount of global memory: 4096 MBytes (4294639616 bytes) ( 6) Multiprocessors, (192) CUDA Cores/MP: 1152 CUDA Cores GPU Clock rate: 1150 MHz (1.15 GHz) Memory Clock rate: 3004 Mhz Memory Bus Width: 256-bit L2 Cache Size: 524288 bytes Maximum Texture Dimension Size (x,y,z) 1D=(65536), 2D=(65536, 65536), 3D=(4096, 4096, 4096) Maximum Layered 1D Texture Size, (num) layers 1D=(16384), 2048 layers Maximum Layered 2D Texture Size, (num) layers 2D=(16384, 16384), 2048 layers Total amount of constant memory: 65536 bytes Total amount of shared memory per block: 49152 bytes Total number of registers available per block: 65536 Warp size: 32 Maximum number of threads per multiprocessor: 2048 Maximum number of threads per block: 1024 Max dimension size of a thread block (x,y,z): (1024, 1024, 64) Max dimension size of a grid size (x,y,z): (2147483647, 65535, 65535) Maximum memory pitch: 2147483647 bytes Texture alignment: 512 bytes Concurrent copy and kernel execution: Yes with 1 copy engine(s) Run time limit on kernels: Yes Integrated GPU sharing Host Memory: No Support host page-locked memory mapping: Yes Alignment requirement for Surfaces: Yes Device has ECC support: Disabled Device supports Unified Addressing (UVA): Yes Device PCI Bus ID / PCI location ID: 1 / 0 Compute Mode: < Default (multiple host threads can use ::cudaSetDevice() with device simultaneously) > ``` deviceQuery, CUDA Driver = CUDART, CUDA Driver Version = 6.5, CUDA Runtime Version = 6.5, NumDevs = 1, Device0 = GeForce GTX 760 Result = PASS karim@Phenuntu:/usr/local/cuda/samples/1_Utilities/deviceQuery$ **DIAGNOSIS ENDS** Ubuntu 14.04

It was fixed for Dan, so you might be experiencing another issue. So please do a separate report then with all the info requested in the template (example .blend, steps to reproduce etc). It's also better to attach system info as a file -- makes things easier to read :)

It was fixed for Dan, so you might be experiencing another issue. So please do a separate report then with all the info requested in the template (example .blend, steps to reproduce etc). It's also better to attach system info as a file -- makes things easier to read :)

Added subscriber: @Darkfie9825

Added subscriber: @Darkfie9825

I am getting this exact error in 2.74 (from Debian Sid repository). The output looks like this:

write exr tmp file, 1920x1080, /home/sofus/blender_temp/blender_EzOX9n/first_blend_2_(Logo_FX)_RenderLayer_exr
CUDA error: ILLEGAL_ADDRESS in cuCtxSynchronize()

Before launching into this:

CUDA error: ILLEGAL_ADDRESS in cuMemcpyDtoH((uchar*)mem.data_pointer + offset, (CUdeviceptr)(mem.device_pointer + offset), size)
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
CUDA error: ILLEGAL_ADDRESS in cuMemAlloc(&device_pointer, size)
*...x31...*
CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer))
*..x24...*
read exr tmp file: /home/sofus/blender_temp/blender_EzOX9n/first_blend_2_(Logo_FX)_RenderLayer_exr
Error: CUDA error: ILLEGAL_ADDRESS in cuCtxSynchronize()

I am using a 560 Ti 1GB in tandem with a 780 Ti 3GB. My scene includes a 500MB fluid simulation, and a dynamic paint cache. The memory usage supposedly peaks at 600MB (4GB during compositing; I had buffer groups and OpenCL on). There is only a subdivided plane and some mesh text in terms of geometry. It managed to render 100 frames (~3 minutes each) before throwing this error. I had Save Buffers on using 256x256 tiles.

I am getting this exact error in 2.74 (from Debian Sid repository). The output looks like this: ``` write exr tmp file, 1920x1080, /home/sofus/blender_temp/blender_EzOX9n/first_blend_2_(Logo_FX)_RenderLayer_exr CUDA error: ILLEGAL_ADDRESS in cuCtxSynchronize() ``` Before launching into this: ``` CUDA error: ILLEGAL_ADDRESS in cuMemcpyDtoH((uchar*)mem.data_pointer + offset, (CUdeviceptr)(mem.device_pointer + offset), size) CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) CUDA error: ILLEGAL_ADDRESS in cuMemAlloc(&device_pointer, size) *...x31...* CUDA error: ILLEGAL_ADDRESS in cuMemFree(cuda_device_ptr(mem.device_pointer)) *..x24...* read exr tmp file: /home/sofus/blender_temp/blender_EzOX9n/first_blend_2_(Logo_FX)_RenderLayer_exr Error: CUDA error: ILLEGAL_ADDRESS in cuCtxSynchronize() ``` I am using a 560 Ti 1GB in tandem with a 780 Ti 3GB. My scene includes a 500MB fluid simulation, and a dynamic paint cache. The memory usage supposedly peaks at 600MB (4GB during compositing; I had buffer groups and OpenCL on). There is only a subdivided plane and some mesh text in terms of geometry. It managed to render 100 frames (~3 minutes each) before throwing this error. I had Save Buffers on using 256x256 tiles.

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Please always make a new report, do not attach these infos to old and already fixed reports.

And please test with official builds from blender.org only and not some third party builds.

Please always make a *new* report, do not attach these infos to old and already fixed reports. And please test with official builds from blender.org only and not some third party builds.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42160
No description provided.