Fix T42160: CUDA error: ILLEGAL_ADDRESS in cuCtxSynchronize()

This is so-called GPU limitation boundary hit, told compiler to NOT include
volume bound function, otherwise some real weird things used to happen.

We actually might want to do the same for CPU, inlining everything is not
the way to get fastest code.